{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "167ee017-5c1d-4067-92fb-b08dfc5d0916",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "1101afba-2be4-4997-a512-02daed49f2ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "e1ee1308-e545-43c6-8495-2811a83bf688",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootBlaster",
                    "type": "Button",
                    "id": "c9df5b0a-f2e8-41a3-9242-5cf57566e349",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootLaser",
                    "type": "Button",
                    "id": "e7b6895c-fbcb-4ea4-b436-b12d45ea0144",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e8821ba-7e07-415e-9d58-c43cedcea85e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "284c1a2b-cda7-4edb-b824-99dc3f0dda57",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "51b071ae-0b94-4eda-ab28-5edefa2d2b2c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a96beb02-3959-479a-895f-b186ec69801d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eeb92e59-c9a6-4b75-b89b-dbb994cd1ae4",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBlaster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab0ee7b6-963b-49ce-aeea-bdd564b4984a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootLaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard control scheme",
            "bindingGroup": "Keyboard control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}